--- a/src/labirinto/labirinto.component.css
+++ b/src/labirinto/labirinto.component.css
@@ -1,46 +1,95 @@
 #bg{
-    width: 100%;
-    height: 100vh;
-    background-color: whitesmoke;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
+  background-color: #f3f3f3;
 }
 
-.parede{
-    width: 80%;
-    height: 80%;
-    border: 1px solid black;
-    color: black;
-    background-color: rgb(177, 207, 197);
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr  1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr  1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    
+#divGeral{
+  width: 75%;
+  height: 60%;
+  display: flex;
+  flex-direction: column;
+  gap: 100px;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(138, 221, 253);
+  border: 5px solid rgb(92, 92, 179);
+  border-radius: 10px;
 }
-#linha{
-    width: 1fr;
-    height: 1fr;
-    background-color: red;
-    
-}
+
+
 .labirinto {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(20px, 1fr));
-    
-    width: 980px; /* Ajuste o tamanho conforme necessário */
-    margin: 0 auto;
-  }
-  
-  .celula {
-    width: 100%;
-    
-    padding-bottom: 100%; /* Mantém cada célula quadrada */
-    background-color: #fff; /* Cor do caminho */
-    border: 1px solid #000; /* Borda para representar as paredes */
-  }
-  
-  .celula.obstaculo {
-    background-color: #000; /* Cor dos obstáculos */
-  }
-  
+  display: grid;
+  grid-template-columns: repeat(19, 1fr);
+  grid-template-rows: repeat(11, 1fr);
+  width: 1000px;
+  grid-gap: 2px;
+  margin: 0 auto;
+  background-color: rgb(67, 155, 238);
+}
+
+.celula {
+  width: 100%;
+  height: 100%;
+  background-color: #f3f3f3;
+  border: 1px solid #ccc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.celula.obstaculo {
+  background-color: #333;
+}
+
+.personagem {
+  width: 100%;
+  height: 100%;
+  background-color: rebeccapurple;
+  border: 1px solid rebeccapurple;
+}
+
+.div-btn{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.btn{
+  width: 200px;
+  height: 50px;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.divTitulo{
+  width: 100%;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px 10px 0 0;
+}
+
+h1{
+  color: #000;
+  font-size: 50px;
+  font-weight: 400;
+  font-family: system-ui;
+}
+
+p{
+  color: #000;
+  font-size: 20px;
+  font-weight: 400;
+  font-family: system-ui;
+}
